package bigken.instantmessage;
option java_package = "com.mi.game.network.data.bin";
option java_outer_classname = "bigken.instantmessage";

//InstantMessage
//Message được client gửi đi khi người dùng gửi message chat.
//Phạm vi:
//1. Chat trong zone (scope = 1)
//2. Chat trong phòng (scope = 2)
//3. Chat private với người khác (scope = 3)

message BINInstantMessageRequest {
	required int32 scope = 1;
	required string instantMessage = 2;
	optional string receiverUserName = 3;
	optional int64 receiverUserId = 4;
	optional int32 textEmoticonId = 5;
}

message BINInstantMessageResponse {
    required bool responseCode = 1;
    optional string message = 2;
	optional int32 scope = 3;
	optional string senderUserName = 4;
	optional int64 senderUserId = 5;
	optional string instantMessage = 6;
	optional int64 sentTime = 7;
	optional int32 zoneId = 8;
	optional int32 roomIndex = 9;
	optional string receiverUserName = 10;
	optional int64 receiverUserId = 11;
	optional int32 textEmoticonId = 12;
	optional string colorCode = 13;//dùng để hiển thị màu tên hiển thị khi chat (định dạng 255,255,255), nếu trường này rỗng thì để màu mặc định
}

message BINInstantMessage {
	optional string senderName = 1;
	optional int64 senderUserId = 2;
	optional string instantMessage = 3;
	optional int64 sentTime = 4;
	optional string recipientName = 5;
	optional int64 recipientUserId = 6;
	optional int32 textEmoticonId = 7;
	optional string colorCode = 8;
}

message BINInstantMessageHistoryRequest {
	required int32 scope = 1;
}

message BINInstantMessageHistoryResponse {
	required bool responseCode = 1;
    optional string message = 2;
	optional int32 scope = 3;
	optional int32 zoneId = 4;
	optional int32 roomIndex = 5;
	repeated BINInstantMessage instantMessages = 6;
}

//End InstantMessage 
