package bigkenLogin;
option java_package = "com.mi.game.network.data.bin";
option java_outer_classname = "bigkenLogin";
import "user_info.proto";
//Login 

message BINLoginRequest {
	required string userName = 1;
	required string password = 2;
}

message BINLoginResponse {
    required bool responseCode = 1;
    optional string message = 2;
    optional BINUserInfo userInfo = 3;
	optional BINUserSetting userSetting = 4;
	optional string sessionId = 5;
	optional bool hasPlayingMatch = 6;//nếu = true => có ván chơi đang chơi dở => chờ để xử lý đưa lại vào bàn
	optional bool enableDebugLag = 7;
}

//End Login 
