package bigken.quickplay;
option java_package = "com.mi.game.network.data.bin";
option java_outer_classname = "bigken.quickplay";

//QuickPlay 

message BINQuickPlayRequest {
	required string deviceId = 1;
	optional string deviceInfo = 2;
}

//End QuickPlay 
